--- a/5.todoList/index.css
+++ b/5.todoList/index.css
@@ -25,6 +25,7 @@ body {
 .stylingBtn{
   justify-content: space-between;
   display: flex;
+ 
 }
 
 h2 {
@@ -61,6 +62,11 @@ button {
   cursor: pointer;
   padding: 8px;
   border-radius: 8px;
+  box-shadow: 20px;
+  background-color: aqua;
+  margin-bottom: 20px;
+  margin-top: 10px;
+
 }
 
 
@@ -93,6 +99,7 @@ input[type="text"] {
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
+  margin-right: 50px;
 }
 
 input[type="text"]:focus {
